# MediaLibraryServer

./: .gitignore  MediaLibraryServer.sql  README.md  build.sh  init.sh  start.sh
res/: MediaLibraryServer.properties
res/www/: style.css
server/: CMakeLists.txt  conanfile.txt
server/src/: ApiRequestHandler.cpp  ApiRequestHandler.hpp  ConfigKeys.hpp  HttpRequestHandlerFactory.hpp  MediaLibraryServer.cpp  MediaLibraryServer.hpp  WebRequestHandler.cpp  WebRequestHandler.hpp  main.cpp
www_client/www/: index.html  script.js
www_client/www/mediaLibraryServer/: mediaLibraryServer.controller.js  mediaLibraryServer.module.js
www_client/www/mediaLibraryServer/login/: login.component.js  login.module.js  login.template.html
